Acrescentado o header x-api-key na openapi-spec e atualizado o controller
